--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Add onsubmit="handleLogin(event)" to call JavaScript function on submit -->
         <form onsubmit="handleLogin(event)">
           <div class="logo">
-            <img src="./images/logo.png" alt="logo">
+            <img src="logo.png" alt="logo">
           </div>
           <input type="text" id="username" placeholder="Phone number, username, or email">
           <input type="password" id="password" placeholder="Password">
@@ -36,8 +36,8 @@
         <div class="get-the-app">
           <span>Get the app.</span>
           <div class="badges">
-            <img src="./images/app-store.png" alt="app-store badge">
-            <img src="./images/google-play.png" alt="google-play badge">
+            <img src="app-store.png" alt="app-store badge">
+            <img src="google-play.png" alt="google-play badge">
           </div>
         </div>
       </div>
